--- a/source/internal_libraries/CMakeLists.txt
+++ b/source/internal_libraries/CMakeLists.txt
@@ -3,6 +3,7 @@
 # [[ ----------------------------------------------------------------------- ]]
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_app_theme")
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_screenshot")
 
 # Add more internal libraries as needed...
 
